--- a/VRodriguezMovie/Views/Shared/_Layout.cshtml
+++ b/VRodriguezMovie/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/VRodriguezMovie.styles.css" asp-append-version="true" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -30,6 +31,13 @@
                         </li>
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="GetFavorito">Favoritos</a>
+                        </li>
+                           
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cine" asp-action="GetAll">Cine</a>
+                        </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Estadistica" asp-action="Estadistica">Estadistica</a>
                         </li>
                     </ul>
                 </div>
