--- a/VRodriguezMovie/wwwroot/css/site.css
+++ b/VRodriguezMovie/wwwroot/css/site.css
@@ -16,3 +16,7 @@ html {
 body {
   margin-bottom: 60px;
 }
+#map {
+    height: 400px; /* The height is 400 pixels */
+    width: 50%; /* The width is the width of the web page */
+}
